# concutter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  concutter.example.toml  docker-compose.yml
crates/sqz-bin/: Cargo.toml
crates/sqz-bin/src/: cli.rs  config.rs  main.rs
crates/sqz-core/: Cargo.toml
crates/sqz-core/src/: code_fence.rs  compressor.rs  domain_detector.rs  layer1_static.rs  layer2_domain.rs  layer3_learned.rs  lib.rs  preprocessor.rs  token_counter.rs  types.rs
crates/sqz-proxy/: Cargo.toml
crates/sqz-proxy/src/: error.rs  lib.rs  middleware.rs  provider.rs  router.rs  server.rs  shadow.rs  state.rs
crates/sqz-proxy/src/admin/: handlers.rs  mod.rs  types.rs
crates/sqz-proxy/src/anthropic/: handler.rs  stream.rs  types.rs
crates/sqz-proxy/src/openai/: handler.rs  mod.rs  stream.rs  types.rs
crates/sqz-store/: Cargo.toml
crates/sqz-store/src/: db.rs  lib.rs  migrations.rs  models.rs
migrations/: 001_initial.sql
rules/domains/: code.toml  finance.toml  legal.toml  medical.toml
rules/stopwords/: ar.txt  de.txt  en.txt  en_semantic.txt  es.txt  fr.txt  hi.txt  ja.txt  ko.txt  pt.txt  ru.txt  ru_semantic.txt  zh.txt
