[package]
name = "sqz"
version.workspace = true
edition.workspace = true

[dependencies]
sqz-core = { path = "../sqz-core" }
sqz-store = { path = "../sqz-store" }
sqz-proxy = { path = "../sqz-proxy" }
tokio.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
reqwest.workspace = true
