[package]
name = "sqz-core"
version.workspace = true
edition.workspace = true

[dependencies]
aho-corasick.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tiktoken-rs.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
